// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users reducer handles actions - setUsers sets users when empty 1`] = `
Immutable.Map {
  "039ea1be861812ac6e210c96ac54fd2523f6d738a2db460613cc9aa8bd1886607f": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "034b0c8c8555259d37b4193e03a09d5f803ebbcb1988edc72fe3d6912a4687512d": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "0214dc56ab3467e74b3bc1fed80d08e0146b251caceddc2ad6bfe37caca5fcc2e5": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #2",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "0279b8ef97aa2c9d402c7c86dcc37e3f979165450ac2bc708bc6897ae33af97d52": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #2",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "026918cbe1c9ace24ff065006c06b3c6344a5d7203ad42a45ddc7c7a41c6edfcc2": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #3",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "03dfe22ffb15850264c08462781e228682e9d333da50d395ab07f2a1535b595444": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #3",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
}
`;

exports[`users reducer handles actions - setUsers sets users with same usernames 1`] = `
Immutable.Map {
  "039ea1be861812ac6e210c96ac54fd2523f6d738a2db460613cc9aa8bd1886607f": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #6",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "034b0c8c8555259d37b4193e03a09d5f803ebbcb1988edc72fe3d6912a4687512d": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #6",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "0214dc56ab3467e74b3bc1fed80d08e0146b251caceddc2ad6bfe37caca5fcc2e5": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #7",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "0279b8ef97aa2c9d402c7c86dcc37e3f979165450ac2bc708bc6897ae33af97d52": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #7",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "026918cbe1c9ace24ff065006c06b3c6344a5d7203ad42a45ddc7c7a41c6edfcc2": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #8",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "03dfe22ffb15850264c08462781e228682e9d333da50d395ab07f2a1535b595444": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #8",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
}
`;

exports[`users reducer handles epics - fetch users when users 1`] = `
Immutable.Map {
  "035302fc10b2dc5cbe747779cd1cbcd7fe111161e09282e210d72dee9f6e68b17a": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #9",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "037128c776aa4b67f744425a67968562667d8793c4ea52aef214a912772f80ebf0": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #9",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "02b7e647acb166a81139b1bcbdde82b8df610f1fb93af5edd0359dd0d7138d9166": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #10",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "03c5eb408fd7016d9f27547abd54110de58644e4d29b63cee5401a51e1f409df67": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #10",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
}
`;
